Feature/product service (#387)
* Feat: 상품 설명 이미지 엔티티 구현

Resolves: #385

* Feat: 상품 설명 이미지 추가 API 구현

Resolves: #385

* Feat: 상품 조회 응답 구조 변경
상품 조회 응답 구조를 상품 설명 이미지 반환하도록 수정
Resolves: #385

* Chore: import 문 최적화

Resolves: #385

* Refactor: 카테고리 controller 테스트 리팩터링
fixtureMonkey를 사용한 구조로 테스트 리팩터링
Resolves: #386

* Refactor: 카테고리 생성 api 명세 테스트 수정

Resolves: #386

* Refactor: 카테고리 api 명세 테스트 수정

Resolves: #386

* Refactor: 옵션 컨트롤러 수정
옵션 컨트롤러 fixtureMonkey 사용으로 수정
Resolves: #386

* Refactor: 카테고리 요청 객체 record 적용
카테고리 요청 객체 record 적용하여 리팩터링
Resolves: #386

* Refactor: 상품 옵션 컨트롤러 리팩터링
상품 옵션 컨트롤러 요청 객체를 record 사용으로 변경하고 테스트 코드를 fixtureMonkey를 사용하도록 수정함
Resolves: #386

* Refactor: 카테고리 저장 로직 리팩터링
카테고리 저장 api 의 서비스 계층과 컨트롤러 계층의 응답 구조의 결합을 분리
Resolves: #386

* Refactor: 카테고리 컨트롤러 수정
카테고리 컨트롤러 서비스단 응답 구조 리팩터링
Resolves: #386

* Refactor: 카테고리 트리 조회 수정
카테고리 트리 조회 트리 조합 로직 서비스로 이전
Resolves: #386

* Fix: 카테고리 트리 조회 로직 수정
수정한 카테고리 트리 조회 로직 오류를 수정함
Resolves: #386

* Refactor: 카테고리 필드 수정
카테고리 imageUrl 필드를 imagePath로 수정
Resolves: #386

* Fix: 옵션 목록 조회 테스트 수정

Resolves: #386

* Refactor: 상품 등록 api 요청 객체 변경 및 테스트 수정

Resolves: #386

* Refactor: 상품 옵션 정의 컨트롤러 수정
상품 옵션 정의 컨트롤러 로직 요청객체 수정 및 서비스 결합 분리
Resolves: #386

* Refactor: 상품 변형 추가 api 수정
상품 변형 추가 api 리팩터링 및 서비스 레이어 결합 분리
Resolves: #386

* Refactor: 상품 옵션 정의 api 수정
상품 옵션 명세 api 우선순위 요청으로 받는 구조로 수정
Resolves: #386

* Refactor: 상품 이미지 추가 api 수정
상품 이미지 추가 , 상품 설명 이미지 추가 요청 객체 수정
Resolves: #386

* Refactor: 상품 설명 이미지 추가 api 수정

Resolves: #386

* Refactor: 상품 판매개시 및 판매 중지 api 수정

Resolves: #386

* Refactor: 카테고리 생성 command 구현

Resolves: #386

* Refactor: import 문 최적화

Resolves: #386

* Refactor: 카테고리 업데이트 api 수정

Resolves: #386

* Refactor: 카테고리 반환 객체 변경

Resolves: #386

* Refactor: 카테고리 서비스 반환 구조 변경

Resolves: #386

* Refactor: 옵션 관련 api 수정

Resolves: #386

* Refactor: 상품 저장, 옵션 설정, 상품 변형 추가 api 수정

Resolves: #386

* Refactor: 상품 수정, 개시, 판매중지 수정

Resolves: #386

* Refactor: 상품 서비스 상품 상세 조회 리팩터링

Resolves: #386

* Refactor: 상품 상세 조회 테스트 리팩터